--- a/button.css
+++ b/button.css
@@ -1,47 +1,94 @@
-.btn-grad{
-    padding: 10px 15px 10px 15px;
-    border: 1px solid white;
-    border-radius: 0.5rem;
-    font-family: sans-serif;
-    color: white;
-    font-size: 0.8rem;
-    font-weight: bold;
-    height: 50px;
-    width: 150px;
-    cursor: pointer;
-    background: linear-gradient(32deg, #dc2430, #7b4397, #dc2430, #7b4397);
-    background-size: 800% 800%;
-    outline: none;
-    animation: discoHover 3s ease infinite;
-    animation-play-state: paused;
+.btn-grad {
+  padding: 10px 15px 10px 15px;
+  border: 1px solid white;
+  border-radius: 0.5rem;
+  font-family: sans-serif;
+  color: white;
+  font-size: 0.8rem;
+  font-weight: bold;
+  height: 50px;
+  width: 150px;
+  cursor: pointer;
+  background: linear-gradient(32deg, #dc2430, #7b4397, #dc2430, #7b4397);
+  background-size: 800% 800%;
+  outline: none;
+  animation: discoHover 3s ease infinite;
+  animation-play-state: paused;
 }
-.btn-outline-grad{
-    padding: 10px 15px 10px 15px;
-    border: 1px solid #dc2430;
-    border-radius: 0.5rem;
-    font-weight: bold;
-    font-family: sans-serif;
-    color: #dc2430;
-    font-size: 0.8rem;
-    height: 50px;
-    width: 150px;
-    cursor: pointer;
-    background: white;
-    outline: none;
+.btn-outline-grad {
+  padding: 10px 15px 10px 15px;
+  border: 1px solid #dc2430;
+  border-radius: 0.5rem;
+  font-weight: bold;
+  font-family: sans-serif;
+  color: #dc2430;
+  font-size: 0.8rem;
+  height: 50px;
+  width: 150px;
+  cursor: pointer;
+  background: white;
+  outline: none;
 }
-.btn-grad:hover{
-    animation-play-state: running;
+.btn-grad:hover {
+  animation-play-state: running;
 }
-.btn-outline-grad:hover{
-    background: linear-gradient(32deg, #dc2430, #7b4397, #dc2430, #7b4397);
-    background-size: 800% 800%;
-    color: white;
-    border: 1px solid white;
-    animation: discoHover 3s ease infinite;
+.btn-outline-grad:hover {
+  background: linear-gradient(32deg, #dc2430, #7b4397, #dc2430, #7b4397);
+  background-size: 800% 800%;
+  color: white;
+  border: 1px solid white;
+  animation: discoHover 3s ease infinite;
+}
+@keyframes discoHover {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
-@keyframes discoHover {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+.btn-rotating-outer{
+  height: 10vh;
+  width: 25vh;
+  position: relative;
+  cursor: pointer;
+}
+.btn-square-1{
+  background: #f67280;
+}
+.btn-square-2{
+  background: #6c567b;
+}
+.btn-square-1,.btn-square-2{
+  margin: auto;
+  height: 10vh;
+  width: 25vh;
+  position: absolute;
+  transition: transform 1.5s, height 1.5s;
+}
+.btn-rotating-outer:hover .btn-square-1{
+  transform: rotate(45deg);
+  height: 20vh;
+}
+.btn-rotating-outer:hover .btn-square-2{
+  transform: rotate(60deg);
+  height: 20vh;
+}
+.btn-text{
+  transition: transform 1.5s, font-size 1.5s, text-decoration 1.5s;
+  font-family: sans-serif;
+  font-weight: bold;
+  color: white;
+  display: flex;
+  padding-top: 20px;
+  justify-content: center;
+}
+.btn-rotating-outer:hover .btn-text{
+  transform: rotate(-105deg);
+  font-size: 1.5rem;
+  text-decoration: underline;
 }
